FIX: Directory Information Spacing & Alignment

--- a/Assets/css/plugin-manager.css
+++ b/Assets/css/plugin-manager.css
@@ -558,6 +558,7 @@ tr.plugin-description td {
     border: 2px inset var(--pp-grey);
     font-weight: 600;
     cursor: context-menu;
+    text-align: center;
 }
 
 #DirectoryInfo > tbody > tr > td {
